fluxcd/apps/overlays/production/readarr/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: readarr
spec:
  template:
    spec:
      containers:
      - name: readarr
        image: docker.io/linuxserver/readarr:0.4.19-nightly
      - name: gluetun
        image: docker.io/qmcgaw/gluetun:v3.39.1
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 2Gi
  - metadata:
      name: downloads
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: ceph-rbd-retain
      resources:
        requests:
          storage: 100Gi
