fluxcd/apps/overlays/production/readarr/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr-xylem
spec:
  parentRefs:
    - name: xylem-gateway
      namespace: arylls-lookout
  hostnames:
    - "readarr.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: readarr
          port: 8787
